--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile('io.springfox:springfox-swagger-ui:2.7.0')
     compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+    //providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
