Changes in controllers; mail service added\

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_agency?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=tymek
 spring.datasource.password=YHM426az!
+
+#Lufthansa API configuration, token is refreshed every 24h
+lufthansa.api.endpoint.prod=https://api-test.lufthansa.com/v1/
+lufthansa.api.key=hpp4e8qg82snzuhkjuz5759v
+lufthansa.api.secret=ApArj3uTZb
+lufthansa.api.token=9wgndatsqt3fg9x6f72kcvz8
+
+#MAIL CONFIG
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kocikocilapcibabci@gmail.com
+spring.mail.password=YHM426az!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
