--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,12 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter'
     compile('com.google.code.gson:gson:2.8.2')
     compile('org.springframework.boot:spring-boot-starter-actuator:1.5.7.RELEASE')
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    //compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('io.springfox:springfox-swagger2:2.7.0')
     compile('io.springfox:springfox-swagger-ui:2.7.0')
     compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     //providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
+
