Email scheduler skeleton created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.mail.username=kocikocilapcibabci@gmail.com
 spring.mail.password=YHM426az!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Adinistration
+admin.name=Tymek
+admin.mail=tymoteusz1500100900@gmail.com
+
+
+
